Text updates from Grant, and updating the news section and image for anne.  Also bugfixes for two ie layout bugs.
git-svn-id: https://source.caret.cam.ac.uk/svn/projects/ul-foundations/foundationsviewer/trunk@9740 59899196-baf2-4bc4-a94d-4a08719e171f

--- a/src/main/webapp/styles/style-document.css
+++ b/src/main/webapp/styles/style-document.css
@@ -83,7 +83,7 @@ table {
 }
 
 .rbtop div,.rbtop,.rbbot div,.rbbot {
-	width: 430px;
+	width: 500px;
 	height: 7px;
 	font-size: 1px;
 }
@@ -93,7 +93,7 @@ table {
 }
 
 .rbroundbox {
-	width: 430px;
+	width: 500px;
 	margin: 1em auto;
 	float: left;
 }
